more symbol table teste - 1 not pass